--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "MC-Markov",
-  "version": "0.0.1",
+  "name": "mcmarkov",
+  "version": "1.0.0",
+  "description": "Markov Chains and Hip Hop Lyrics",
+  "main": "markover.js",
   "dependencies": {
-    "cheerio": "^0.20.0",
-    "request": "^2.72.0"
+    "rappable": "^1.2.0"
   },
-  "license": "GPL",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/verfehlix/MC-Markov.git"
+    "url": "git+https://github.com/verfehlix/MC-Markov.git"
   },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/verfehlix/MC-Markov/issues"
+  },
+  "homepage": "https://github.com/verfehlix/MC-Markov#readme"
 }
