--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Markov Chains and Hip Hop Lyrics",
   "main": "markover.js",
-  "dependencies": {
-    "rappable": "^1.2.0"
+  "dependencies": {  
+    "cheerio": "^0.20.0",
+    "request": "^2.72.0",
+    "lodash": "^4.12.0",
+    "rappable": "^2.1.4"
   },
   "devDependencies": {},
   "scripts": {
